# treeconfigparser

./: .gitignore  CHANGELOG  LICENSE  README.md  publish.md  requirements.txt  setup.cfg
anaconda/treeconfigparser/: meta.yaml
docs/: index.html
treeconfigparser/: __init__.py  documentation.md
