[metadata]
license_files = LICENSE
name = treeconfigparser
version = 1.0.1
author = Alban Farchi
author_email = alban.farchi@enpc.fr
description = Custom configuration parser based on a tree
long_description = file:README.md
long_description_content_type = text/markdown
url = https://gitlab.enpc.fr/cerea-da-team/treeconfigparser
project_urls =
    Documentation = https://cerea-da-team.gitlab.enpc.fr/treeconfigparser
    Source = https://gitlab.enpc.fr/cerea-da-team/treeconfigparser
    Bug Tracker = https://gitlab.enpc.fr/cerea-da-team/treeconfigparser/-/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    path
    numpy
