[metadata]
license_files = LICENSE
name = treeconfigparser
version = 1.1.0
author = Alban Farchi
author_email = alban.farchi@enpc.fr
description = Custom configuration parser based on a tree
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/cerea-daml/treeconfigparser
project_urls =
    Documentation = https://cerea-daml.github.io/treeconfigparser/
    Source = https://github.com/cerea-daml/treeconfigparser
    Bug Tracker = https://github.com/cerea-daml/treeconfigparser/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    path
    numpy
